[package]
name = "bdk_test_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
electrsd = { version = "0.21", features = ["bitcoind_22_0", "electrs_0_8_10"] }
bitcoincore-rpc = { version = "0.16"}
log = "^0.4"
bitcoin = { version = "0.29.1", features = ["serde", "base64", "rand"] }
electrum-client = "0.12"
